<resources>
    <string name="app_name">Runas</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="passAgain">Vuelve a escribir la contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="registro">Crear usuario</string>
    <string name="login">Login</string>
    <string name="perfil">Perfil</string>
    <string name="agregar_runa">Agregar runa</string>
    <string name="listar_runas">Listar runas</string>
    <string name="precision">Precisión</string>
    <string name="dominacion">Dominación</string>
    <string name="brujeria">Brujería</string>
    <string name="valor">Valor</string>
    <string name="inspiracion">Inspiración</string>
    <string name="ataque_intensificado">Ataque Intensificado</string>
    <string name="compas_letal">Compás Letal</string>
    <string name="pies_veloces">Pies Veloces</string>
    <string name="conquistador">Conquistador</string>
    <string name="supercoracion">Supercuración</string>
    <string name="triunfo">Triunfo</string>
    <string name="claridad_mental">Claridad Mental</string>
    <string name="leyenda_presteza">Leyenda: Presteza</string>
    <string name="leyenda_tenacidad">Leyenda: Tenacidad</string>
    <string name="leyenda_linaje">Leyenda: Linaje</string>
    <string name="golpe_de_gracia">Golpe de gracia</string>
    <string name="derribado">Derribado</string>
    <string name="ultimo_esfuerzo">Último esfuerzo</string>
    <string name="electrocutar">Electrocutar</string>
    <string name="depredador">Depredador</string>
    <string name="cosecha_oscura">Cosecha Oscura</string>
    <string name="lluvia_de_cuchillas">Lluvia de Cuchillas</string>
    <string name="golpe_bajo">Golpe bajo</string>
    <string name="sabor_a_sangre">Sabor a sangre</string>
    <string name="impacto_repentino">Impacto repentino</string>
    <string name="guardian_zombie">Guardian zombie</string>
    <string name="poro_fantasmal">Poro fantasmal</string>
    <string name="coleccion_de_glovos_oculares">Colección de glovos oculares</string>
    <string name="cazador_de_tesoros">Cazador de tesoros</string>
    <string name="cazador_ingenioso">Cazador ingenioso</string>
    <string name="cazador_incesante">Cazador incesante</string>
    <string name="cazador_definitivo">Cazador definitivo</string>
    <string name="invocar_a_aery">Invocar a aery</string>
    <string name="cometa_arcano">Cometa arcano</string>
    <string name="irrupcion_de_fase">Irrupción de fase</string>
    <string name="orbe_anulador">Orbe anulador</string>
    <string name="banda_de_mana">Banda de mana</string>
    <string name="capa_del_nimbo">Capa del nimbo</string>
    <string name="trascendencia">Trascendencia</string>
    <string name="celeridad">Celeridad</string>
    <string name="concentracion_absoluta">Concentración absoluta</string>
    <string name="pirolaser">Pirolaser</string>
    <string name="caminar_sobre_agua">Caminar sobre agua</string>
    <string name="se_avecina_tormenta">Se avecina tormenta</string>
    <string name="garras_del_inmortal">Garras del inmortal</string>
    <string name="reverberacion">Reverberación</string>
    <string name="protector">Protector</string>
    <string name="demoler">Demoler</string>
    <string name="fuente_de_vida">Fuente de vida</string>
    <string name="golpe_de_escudo">Golpe de escudo</string>
    <string name="condicionamiento">Condicionamiento</string>
    <string name="fuerzas_renovadas">Fuerzas renovadas</string>
    <string name="revestimiento_de_huesos">Revestimiento de huesos</string>
    <string name="sobrecrecimiento">Sobrecrecimiento</string>
    <string name="revitalizar">Revitalizar</string>
    <string name="inquebrantable">Inquebrantable</string>
    <string name="libro_de_hechizos">Libro de hechizos</string>
    <string name="mejora_glacial">Mejora glacial</string>
    <string name="primer_golpe">Primer golpe</string>
    <string name="destello_hextech">Destello hextech</string>
    <string name="calzado_magico">Calzado mágico</string>
    <string name="tonico_triple">Tónico triple</string>
    <string name="mercado_del_futuro">Mercado del futuro</string>
    <string name="desmaterializador_de_subditos">Desmaterializador de subditos</string>
    <string name="entrega_de_galletas">Entrega de galletas</string>
    <string name="perspicacia_cosmica">Perspicacia cósmica</string>
    <string name="velocidad_de_acercamiento">Velocidad de acercamiento</string>
    <string name="tonico_de_distorsion_temporal">Tónico de distorsión temporal</string>
    <string name="fuerza_adaptable">Fuerza adaptable</string>
    <string name="velocidad_de_ataque">Velocidad de ataque</string>
    <string name="velocidad_de_habilidades">Velocidad de habilidades</string>
    <string name="progresion_de_vida">Progresión de vida</string>
    <string name="resistencia_a_tenacidad_y_relentizaciones">Resistencia a tenacidad y ralentizaciones</string>
    <string name="subrunas">Subrunas</string>
    <string name="velovidad_de_movimiento">Velocidad de movimiento</string>
    <string name="vida">Vida</string>
    <string name="runa_principal">Runa principal</string>
    <string name="runa_secundaria">Runa secundaria</string>
    <string name="nombre_de_la_pagina_de_runa">Nombre de la pagina de runa</string>
    <string name="menu">Menú</string>
    <string name="atras">Atrás</string>
    <string name="adelante">Adelante</string>
    <string name="photoCapture">Captura fotográfica</string>
    <string name="selectPicture">Seleccionar una imagen</string>
</resources>